[gd_scene load_steps=19 format=3 uid="uid://sqgsxom5lp6h"]

[ext_resource type="PackedScene" uid="uid://brydcfmq8ffvv" path="res://scenes/maps/map_template.tscn" id="1_io0dh"]
[ext_resource type="PackedScene" uid="uid://doosiuu4p0wsg" path="res://scenes/UserInterface/UI.tscn" id="2_08biu"]
[ext_resource type="Script" path="res://scripts/WaveManager.gd" id="3_bxnyp"]
[ext_resource type="Script" path="res://scripts/EnemySpawner.gd" id="4_n520v"]
[ext_resource type="Script" path="res://scripts/enemy_sequence.gd" id="5_0yikr"]
[ext_resource type="Script" path="res://scripts/waves.gd" id="6_q6h6a"]
[ext_resource type="PackedScene" uid="uid://c0ynyy2q783d7" path="res://scenes/player/player.tscn" id="7_jwq11"]
[ext_resource type="Texture2D" uid="uid://cb3elq7rn0857" path="res://assets/backgrounds/Dia0/FondoTuto.png" id="8_svrw3"]

[sub_resource type="Resource" id="Resource_2neat"]
script = ExtResource("5_0yikr")
name = "aluxe1"
amount = 1
time = 2.0

[sub_resource type="Resource" id="Resource_454uy"]
script = ExtResource("5_0yikr")
name = "aluxe2"
amount = 1
time = 2.0

[sub_resource type="Resource" id="Resource_eaxbb"]
script = ExtResource("5_0yikr")
name = "aluxe3"
amount = 1
time = 2.0

[sub_resource type="Resource" id="Resource_jssud"]
script = ExtResource("6_q6h6a")
enemy_sequences = Array[ExtResource("5_0yikr")]([SubResource("Resource_2neat"), SubResource("Resource_454uy"), SubResource("Resource_eaxbb")])

[sub_resource type="Resource" id="Resource_yxf8d"]
script = ExtResource("5_0yikr")
name = "aluxe1"
amount = 5
time = 1.5

[sub_resource type="Resource" id="Resource_l1uku"]
script = ExtResource("6_q6h6a")
enemy_sequences = Array[ExtResource("5_0yikr")]([SubResource("Resource_yxf8d")])

[sub_resource type="Resource" id="Resource_eo8lr"]
script = ExtResource("5_0yikr")
name = "aluxe2"
amount = 6
time = 1.25

[sub_resource type="Resource" id="Resource_e1g0d"]
script = ExtResource("6_q6h6a")
enemy_sequences = Array[ExtResource("5_0yikr")]([SubResource("Resource_eo8lr")])

[sub_resource type="Resource" id="Resource_riq5v"]
script = ExtResource("5_0yikr")
name = "aluxe3"
amount = 7
time = 1.0

[sub_resource type="Resource" id="Resource_t7kr7"]
script = ExtResource("6_q6h6a")
enemy_sequences = Array[ExtResource("5_0yikr")]([SubResource("Resource_riq5v")])

[node name="TestingMap" type="Node2D"]
y_sort_enabled = true

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 15
anchor_mode = 0
zoom = Vector2(4, 4)

[node name="UI" parent="Camera2D" instance=ExtResource("2_08biu")]
top_level = true
visibility_layer = 2
z_as_relative = false
scale = Vector2(0.25, 0.25)
credits = 10000
metadata/_edit_use_anchors_ = true

[node name="Wave_Manager" type="Node" parent="."]
script = ExtResource("3_bxnyp")

[node name="spawnerNode" type="Node" parent="Wave_Manager"]
script = ExtResource("4_n520v")
enemy_data = Array[ExtResource("6_q6h6a")]([SubResource("Resource_jssud"), SubResource("Resource_l1uku"), SubResource("Resource_e1g0d"), SubResource("Resource_t7kr7")])

[node name="Player" parent="." instance=ExtResource("7_jwq11")]

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -11
position = Vector2(240, 136)
texture = ExtResource("8_svrw3")

[node name="Ground" parent="." node_paths=PackedStringArray("player") instance=ExtResource("1_io0dh")]
z_index = -10
layer_0/y_sort_origin = 1
layer_0/tile_data = PackedInt32Array()
layer_1/name = "dirt_path"
layer_1/tile_data = PackedInt32Array()
layer_2/y_sort_origin = 3
layer_3/name = "terrain"
layer_3/y_sort_enabled = true
layer_3/y_sort_origin = 4
layer_3/z_index = 3
layer_3/tile_data = PackedInt32Array(917504, 65536, 3, 917505, 65536, 3, 917506, 65536, 3, 917507, 65536, 3, 917508, 65536, 3, 917509, 65536, 3, 917510, 65536, 3, 917511, 65536, 3, 917512, 65536, 3, 917513, 65536, 3, 917514, 65536, 3, 917515, 65536, 3, 917516, 65536, 3, 917517, 65536, 3, 917518, 65536, 3, 917519, 65536, 3, 917520, 65536, 3, 917521, 65536, 3, 917522, 65536, 3, 917523, 65536, 3, 917524, 65536, 3, 917525, 65536, 3, 917526, 65536, 3, 917527, 65536, 3, 917528, 65536, 3, 917529, 65536, 3, 917530, 65536, 3, 917531, 65536, 3, 917532, 65536, 3, 917533, 65536, 3, 131072, 65536, 3, 131073, 65536, 3, 131074, 65536, 3, 131075, 65536, 3, 131076, 65536, 3, 131077, 65536, 3, 131078, 65536, 3, 131079, 65536, 3, 131080, 65536, 3, 131081, 65536, 3, 131082, 65536, 3, 131083, 65536, 3, 131084, 65536, 3, 131085, 65536, 3, 131086, 65536, 3, 131087, 65536, 3, 131088, 65536, 3, 131089, 65536, 3, 131090, 65536, 3, 131091, 65536, 3, 131092, 65536, 3, 131093, 65536, 3, 131094, 65536, 3, 131095, 65536, 3, 131100, 65536, 3, 131101, 65536, 3, 131099, 65536, 3, 131098, 65536, 3, 131097, 65536, 3, 131096, 65536, 3)
finishing_tile = Vector2i(29, 11)
starting_tile = Array[Vector2i]([Vector2i(0, 5)])
player = NodePath("../Player")

[connection signal="turret_selected" from="Camera2D/UI" to="Ground" method="_on_control_turret_selected"]
[connection signal="waves_ended" from="Wave_Manager" to="Camera2D/UI" method="_on_wave_changed"]
[connection signal="enemy_spawned" from="Wave_Manager/spawnerNode" to="Camera2D/UI" method="_on_spawner_node_enemy_spawned"]
[connection signal="wave_changed" from="Wave_Manager/spawnerNode" to="Ground" method="_on_spawner_node_wave_changed"]
[connection signal="wave_ended" from="Wave_Manager/spawnerNode" to="Ground" method="_on_spawner_node_wave_ended"]

[editable path="Ground"]
